# playground

./: LICENSE  README.md
sycl-win-cpu/: CMakeLists.txt  README.md  main.cpp
